[package]
name = "md_ol_util"
version = "0.1.0"
edition = "2024"
authors = ["Kazushi Konosu <kazushi@konosu.me>"]
license = "MIT"
repository = "https://github.com/kazushisan/md_ol_util"
documentation = "https://docs.rs/md_ol_util"

[dependencies]
comrak = "0.39"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
