[package]
name = "md_ol_util"
description = "Transform markdown unordered lists to ordered lists with current position expressions"
version = "0.0.0" # version will be set by release script
edition = "2024"
authors = ["Kazushi Konosu <kazushi@konosu.me>"]
license = "MIT"
repository = "https://github.com/kazushisan/md_ol_util"
documentation = "https://docs.rs/md_ol_util"

[dependencies]
comrak = "0.39"
regex = "1.11"
clap = { version = "4.5", features = ["derive"] }
